--- a/index.html
+++ b/index.html
@@ -5,13 +5,101 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>HOME PAGE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
     <script src="main.js"></script>
   </head>
   <body>
-    <div>header</div>
-    <div>main</div>
-    <div>footer</div>
+    <header>
+      <a href="index.html" class="left">SUNSHINE</a>
+    </header>
+    <div class="navbar">
+      <a href="">NEWS</a>
+      <a href="">POLITICS</a>
+      <a href="">BUSINESS</a>
+      <a href="">HEALTH</a>
+      <a href="">EDUCATION</a>
+      <a href="">SPORTS</a>
+      <a href="login.html" class="right">LOG IN</a>
+    </div>
+    <main>
+      <h3>LATEST NEWS</h3>
+      <div class="left">
+        <h4>Olympic Winter Games Beijing 2022 medal designs unveiled</h4>
+        <p>
+          The Beijing 2022 medals - named "Tong Xin", meaning "together as one"
+          - are composed of five rings and a centre; the design is based on
+          Chinese ancient jade concentric circle pendants with the five rings
+          representing the Olympic spirit to bring people together and the
+          splendour of the Olympic Winter Games being shared all over the world.
+        </p>
+        <img class="zurag" src="2.jpg" />
+      </div>
+      <div class="main">
+        <h4>
+          Olympic and Paralympic Winter Games Beijing 2022 - Updates on
+          Spectators, Vaccination and COVID-19 Countermeasures
+        </h4>
+        <p>
+          Considering the above objective, the IOC and IPC fully respect the
+          principles established by Beijing 2022. These principles are based on
+          wide-ranging consultations with international experts and the Chinese
+          authorities, as well as the experience of Olympic and Paralympic
+          stakeholders. The principles presented by Beijing 2022 will be
+          detailed in the Playbooks. The first version of these Playbooks will
+          be released in late October. A second version will then be published
+          in December.
+        </p>
+        <img src="1.jpg" />
+      </div>
+      <div class="right">
+        <p1>
+          The IOC and IPC welcome the decision to allow for the sale of tickets
+          to spectators residing in China’s mainland. This will facilitate the
+          growth of winter sports in China by giving those spectators a
+          first-hand Olympic and Paralympic experience of elite winter sports,
+          as well as bringing a favourable atmosphere to the venues. However,
+          all parties feel for the athletes and the spectators from around the
+          world, knowing that the restriction on spectators from outside
+          mainland China had to be put in place in order to ensure the safe
+          holding of the Games this winter. Further information about the
+          implementation of these policies and additional information about
+          COVID-19 countermeasures will be detailed in the Playbooks, which will
+          be released in late October and December.
+        </p1>
+
+        <p>
+          The Olympic Winter Games Beijing 2022 will take place between 4 and 20
+          February, while the Paralympic Winter Games will be held from 4 until
+          13 March.
+        </p>
+      </div>
+    </main>
+    <footer>
+      <h3>FEATURED NEWS</h3>
+      <div class="left1">
+        <p>
+          Considering the above objective, the IOC and IPC fully respect the
+          principles established by Beijing 2022. These principles are based on
+          wide-ranging consultations with international experts and the Chinese
+          authorities, as well as the experience of Olympic and Paralympic
+          stakeholders. The principles presented by Beijing 2022 will be
+          detailed in the Playbooks. The first version of these Playbooks will
+          be released in late October. A second version will then be published
+          in December.
+        </p>
+      </div>
+      <div class="right1">
+        <p>
+          Considering the above objective, the IOC and IPC fully respect the
+          principles established by Beijing 2022. These principles are based on
+          wide-ranging consultations with international experts and the Chinese
+          authorities, as well as the experience of Olympic and Paralympic
+          stakeholders. The principles presented by Beijing 2022 will be
+          detailed in the Playbooks. The first version of these Playbooks will
+          be released in late October. A second version will then be published
+          in December.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
->
