--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <title>HOME PAGE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
-    <script src="main.js"></script>
   </head>
   <body>
     <header>
-      <a href="index.html" class="left">SUNSHINE</a>
+      <a href="index.html" class="left">NAME</a>
     </header>
     <div class="navbar">
       <a href="">NEWS</a>
@@ -102,4 +101,5 @@
       </div>
     </footer>
   </body>
+  <script type="text/javascript" src="main.js"></script>
 </html>
