--- a/login.html
+++ b/login.html
@@ -29,12 +29,17 @@
           <form action="/" method="post">
             <div class="field-wrap">
               <label> Email Address <span class="req">*</span> </label>
-              <input type="email" required autocomplete="off" />
+              <input id="username" type="email" required autocomplete="off" />
             </div>
 
             <div class="field-wrap">
               <label> Password <span class="req">*</span> </label>
-              <input type="password" required autocomplete="off" />
+              <input
+                type="password"
+                required
+                autocomplete="off"
+                onfocus="startTimer()"
+              />
             </div>
 
             <p class="forgot"><a href="#">Forgot Password?</a></p>
