--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <title>LOGIN PAGE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="main.js"></script>
   </head>
   <body>
@@ -26,7 +27,7 @@
       <div class="tab-content">
         <div id="login">
           <h1>Нэвтрэх хуудас</h1>
-          <form action="/" method="post">
+          <form action="index.html">
             <div class="field-wrap">
               <label> Email Address <span class="req">*</span> </label>
               <input id="username" type="email" required autocomplete="off" />
@@ -35,6 +36,7 @@
             <div class="field-wrap">
               <label> Password <span class="req">*</span> </label>
               <input
+                id="Password"
                 type="password"
                 required
                 autocomplete="off"
@@ -44,7 +46,9 @@
 
             <p class="forgot"><a href="#">Forgot Password?</a></p>
             <p><a href="signin.html">Create New Account</a></p>
-            <button class="button button-block">Log In</button>
+            <button class="button button-block" onclick="validation()">
+              Log In
+            </button>
           </form>
         </div>
       </div>
