--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <a href="">NEWS</a>
       <a href="">POLITICS</a>
       <a href="">BUSINESS</a>
-      <a href="">HEALTH</a>
-      <a href="">EDUCATION</a>
+      <a href="health.html">HEALTH</a>
+      <a href="education.html">EDUCATION</a>
       <a href="">SPORTS</a>
       <a href="login.html" class="right">LOG IN</a>
     </div>
