--- a/education.html
+++ b/education.html
@@ -16,7 +16,7 @@
       <a href="">POLITICS</a>
       <a href="">BUSINESS</a>
       <a href="health.html">HEALTH</a>
-      <a href="">SPORTS</a>
+      <a href="sports.html">SPORTS</a>
       <a href="login.html" class="right">LOG IN</a>
     </div>
     <main>
