--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="">BUSINESS</a>
       <a href="health.html">HEALTH</a>
       <a href="education.html">EDUCATION</a>
-      <a href="">SPORTS</a>
+      <a href="sports.html">SPORTS</a>
       <a href="login.html" class="right">LOG IN</a>
     </div>
     <main>
